--- a/localisation/bav_focus_l_english.yml
+++ b/localisation/bav_focus_l_english.yml
@@ -158,7 +158,7 @@
  BAV_navy_games_desc:0 "강력한 해군을 보유하는 것은 제대로 훈련되지 않은 선원들에게는 무용지물이기 때문에, 이제 우리는 기동 훈련을 함으로써 우리 해군들이 영국 해군만큼 유능할 수 있도록 훈련시킬 수 있습니다."
  BAV_marines:0 "붉은 해병대"
  BAV_marines_desc:0 "수륙양용전을 전문으로 하는 병력은 그 어느 때보다 없어서는 안 될 병력이 커지고 있습니다. 우리 해군 보병들이 전문적인 상륙정과 훈련을 지원받으면서 급조된 방법과 장비가 과거의 것이 됩니다."
- BAV_war_GER:0 "프로이센과의 전쟁"
+ BAV_war_GER:0 "바이에른이 새로운 독일이다"
  BAV_war_GER_desc:0 "프로이센은 대전이 끝난 후 오랫동안 독일 국가들 중 가장 지배적인 국가였으나, 지금은 바이에른의 시대입니다."
  BAV_purge:0 "재통일 완성"
  BAV_purge_desc:0 "우리는 재통일을 이뤘습니다! 우리는 개발뿐만 아니라 외부 정책 및 추가 복구에 절차를 밟아야 합니다."
@@ -183,6 +183,15 @@
  BAV_seek_reunification:0 "재통일 추구"
  BAV_seek_reunification_desc:0 "통일은 필수적입니다. 독일은 붉은 깃발 아래, 붉은 독일 아래 재결합해야 합니다."
  
+ ##Decisions
+ BAV_imminent_civil_war:0 "임박한 내전"
+ BAV_imminent_civil_war_desc:0 "전선이 그려졌습니다... 독일 내전이 일어날 것은 매우 분명합니다. 프로이센인들은 올겨울 공세를 준비하고 있습니다. 독일 내의 나라들과 제휴해야 합니다. 당신의 나라와 동맹을 맺은 나라들이 당신과 함께 싸우게 될 것입니다."
+ BAV_imminent_civil_war_decision:0 "내전 준비"
+ BAV_imminent_civil_war_outbreak_decision:0 "내전 발발!"
+ BAV_align_SAX:0 "작센과의 제휴"
+ BAV_align_WUT:0 "바덴과의 제휴"
+ BAV_align_WSM:0 "저지 독일과의 제휴"
+ BAV_align_RHN:0 "라인란트와의 제휴"
  BAV_baden:0 "슈바벤 폭동"
  BAV_baden_desc:0 "우리는 독일의 슈바벤 사람들을 다시 통일시켜야 합니다. 바덴-뷔르템베르크의 작은 왕국은 우리의 뜻에 쉽게 굴복해야 합니다."
  BAV_rhine:0 "라인으로의 진군"
