--- a/localisation/britain_focus_l_english.yml
+++ b/localisation/britain_focus_l_english.yml
@@ -1,74 +1,74 @@
 ﻿l_english:
   UK_reinforce_empire:0 "제국 강화"
-  UK_reinforce_empire_desc:0 "As the greatest empire to ever exist, continuing our dominance is in our best interest."
+  UK_reinforce_empire_desc:0 "현존하는 가장 위대한 제국으로서, 우리의 지배를 지속하는 것이 가장 큰 이익입니다."
   UK_renew_commonwelth:0 "영연방 통합"
-  UK_renew_commonwelth_desc:0 "Renewing our Commonwealth ties is an important part of keeping our colonies from distancing themselves from their masters."
+  UK_renew_commonwelth_desc:0 "영연방 관계를 새롭게 하는 것은 식민지가 그들의 주인과 거리를 두는 것을 막는 중요한 부분입니다."
   UK_india_factories:0 "인도 공장 신축"
-  UK_india_factories_desc:0 "British Raj is a severely underdeveloped region of our empire. They would greatly appreciate it if we were to construct new factories for them."
+  UK_india_factories_desc:0 "영국령 인도는 우리 제국의 심각하게 낙후된 지역입니다. 그들을 위해 새로운 공장을 건설해 준다면 그들은 매우 고마워할 것입니다."
   UK_canada_factories:0 "캐나다 공장 신축"
-  UK_canada_factories_desc:0 "Canada is not the most underdeveloped region of our empire, but it does require new factories in order to help remedy being affected by the Great Depression."
+  UK_canada_factories_desc:0 "캐나다는 우리 제국의 가장 낙후된 지역은 아니지만, 대공황의 영향에서 벗어나기 위해 새로운 공장이 필요합니다."
   UK_gibraltar_fort:0 "암벽 요새화"
-  UK_gibraltar_fort_desc:0 "The Spanish, to this day, are still upset at the fact that Gibraltar remains in British hands. Fortification of the Rock, as its known, is a necessary precaution for a future conflict."
+  UK_gibraltar_fort_desc:0 "스페인 사람들은 오늘날까지도 지브롤터가 영국인의 손에 남아 있다는 사실에 여전히 화가 나 있습니다. 지브롤터 암벽 요새화는 미래의 분쟁에 필요한 예방책입니다."
   UK_egypt_industry:0 "이집트 신산업 건설"
-  UK_egypt_industry_desc:0 "A majority of Egypt is desert wasteland. The remainder of Egypt is mainly rural areas. We need to fix this issue by constructing new factories within our colony on the River Nile."
+  UK_egypt_industry_desc:0 "이집트의 대다수는 사막 황무지이고 나머지 지역은 주로 농촌 지역입니다. 나일강에 새로운 공장을 건설함으로써 이 문제를 해결해야 합니다."
   UK_malaya_forts:0 "말레이 보호"
-  UK_malaya_forts_desc:0 "Our main supplier of Rubber within our empire is within British Malaya. If we were to lose this region, it would devastate our industry. That simply cannot happen."
+  UK_malaya_forts_desc:0 "우리 제국 내 고무의 주요 공급처는 영국령 말레이에 있습니다. 만약 이 지역을 잃게 된다면, 우리 산업은 황폐화될 것입니다. 도저히 있을 수 없는 일입니다."
   UK_civil_factories:0 "산업 확장"
-  UK_civil_factories_desc:0 "The British countryside is filled with open spaces to construct new factories and public works. We must utilise this space."
+  UK_civil_factories_desc:0 "영국의 시골은 새로운 공장과 공공사업을 건설할 수 있는 열린 공간으로 가득 차 있습니다. 이 공간을 활용해야 합니다."
   UK_civil_factories2:0 "산업 확장 II"
-  UK_civil_factories2_desc:0 "We must continue our development of the British countryside, as we are currently the second industrial power in the world, behind Russia. We need to be number one."
+  UK_civil_factories2_desc:0 "우리는 현재 러시아에 이어 세계 제2의 산업 강국이기에, 영국의 농촌 발전을 계속해야 합니다. 우리가 1등이 되어야 합니다."
   UK_dockyards:0 "조선소 확장"
-  UK_dockyards_desc:0 "Our dockyards need updating more than anything. Thusly, we should make an effort to expand and renovate them."
+  UK_dockyards_desc:0 "우리 조선소는 무엇보다 현대화가 필요합니다. 그러므로, 조선소를 확장하고 개수하는 노력을 해야 합니다."
   UK_steel:0 "철강 공장 보조금 지급"
-  UK_steel_desc:0 "British steel is one of our largest exports and resources within our empire. We need to expand our production as quickly as possible."
+  UK_steel_desc:0 "영국 철강은 우리 제국 내에서 가장 많은 수출품이자 자원 중 하나입니다. 우리는 가능한 한 빨리 생산을 확대해야 합니다."
   UK_military_factories:0 "군수공장 확장"
-  UK_military_factories_desc:0 "Some of our old and abandoned factories can easily be repurposed as military factories. This endeavour will be worth it in the long term."
+  UK_military_factories_desc:0 "오래된 공장들과 버려진 공장들 중 일부는 군수공장으로 쉽게 용도 변경될 수 있습니다. 이러한 노력은 장기적으로 가치가 있을 것입니다."
   UK_science_effort:0 "과학 주력"
-  UK_science_effort_desc:0 "Our research capacity can easily be improved. With a few small reforms in our education system, this expectation will become a reality."
+  UK_science_effort_desc:0 "우리의 연구 능력은 쉽게 향상될 수 있습니다. 교육 체계의 몇 가지 작은 개혁으로, 이러한 기대는 현실이 될 것입니다."
   UK_nukes:0 "핵 주력"
-  UK_nukes_desc:0 "We need to prepare for the next era of warfare; nuclear. With the construction of nuclear weapons, we can easily dominate over the world."
+  UK_nukes_desc:0 "전쟁의 다음 시대, 핵에 대비해야 합니다. 핵무기의 건설로 세계를 쉽게 지배할 수 있습니다."
   UK_rockets:0 "로켓공학 주력"
-  UK_rockets_desc:0 "If we can develop rocket technology, our planes can move faster, and strategic bombers can be replaced with simple rockets."
+  UK_rockets_desc:0 "로켓 기술을 개발할 수 있다면 우리 비행기는 더 빨리 움직일 수 있고, 전략폭격기는 단순한 로켓으로 대체될 수 있습니다."
   UK_colonial_elite:0 "식민지인 모집"
-  UK_colonial_elite_desc:0 "Our colonies are very powerful on their own, and if all of them were to work together for one power, that power would be unstoppable. Luckily, that power is us."
+  UK_colonial_elite_desc:0 "우리의 식민지는 그들 스스로 매우 강력합니다. 그리고 만약 그들 모두가 하나의 힘을 위해 함께 일한다면, 그 힘은 막을 수 없을 것입니다. 다행히도, 그 힘은 우리입니다."
   UK_limited_rearmament:0 "전반적인 재무장"
-  UK_limited_rearmament_desc:0 "The world is preparing for a conflict. Unfortunately, as a major power, there is no possible way for us to stay neutral. Thusly, we must rearm and mobilise."
+  UK_limited_rearmament_desc:0 "세계는 분쟁에 대비하고 있습니다. 불행히도, 주요 강국으로서, 우리가 중립을 지킬 수 있는 방법은 없습니다. 그러므로, 우리는 다시 무기를 들고 군대를 동원해야 합니다."
   UK_war_exercices:0 "기동 훈련"
-  UK_war_exercices_desc:0 "An army drill will help our troops understand what true warfare is like. If they don't know what true warfare is, they will easily perish."
+  UK_war_exercices_desc:0 "기동 훈련은 우리 군대가 진정한 전쟁이 어떤 것인지 이해하는 데 도움이 될 것입니다. 만약 진정한 전쟁이 무엇인지 모른다면, 쉽게 멸망할 것입니다."
   UK_forts:0 "본토 방어"
-  UK_forts_desc:0 "The British Isles haven't been sucessfully invaded since the days of William the Conqueror. With new advances in technology throughout the world, that might not always be the case. We must defend our island, whatever the cost may be."
+  UK_forts_desc:0 "브리튼 제도는 정복자 윌리엄 시대 이후로 침략을 받지 않았습니다. 전 세계적으로 새로운 기술의 발전으로 인해, 항상 그렇지는 않을 수도 있습니다. 어떤 대가를 치르더라도 우리 섬을 지켜야 합니다."
   UK_fighter:0 "전투기 주력"
-  UK_fighter_desc:0 "These light aircrafts will dominate the skies of our enemies, which is exactly what we want."
+  UK_fighter_desc:0 "이 경비행기들은 적들의 하늘을 지배할 것입니다. 이것이 바로 우리가 원하는 것입니다."
   UK_radar:0 "레이더"
-  UK_radar_desc:0 "We need to research and build new radar systems to see and hear the enemy before it attacks."
+  UK_radar_desc:0 "적들이 공격해오기 전에 보고 들을 수 있는 새로운 레이더 체계를 연구하고 구축해야 합니다."
   UK_tank:0 "기갑 주력"
-  UK_tank_desc:0 "With new armoured divisions, we will easily break through the enemy front lines."
+  UK_tank_desc:0 "새로운 기갑사단으로 적의 전선을 쉽게 돌파할 것입니다."
   UK_motor:0 "차량화 주력"
-  UK_motor_desc:0 "Modern warfare has one key factor; speed. We need to integrate more motorised regiments into our royal army."
+  UK_motor_desc:0 "현대전은 속도라는 한 가지 핵심 요인이 있습니다. 더 많은 차량화 연대를 왕립육군에 통합해야 합니다."
   UK_battleship:0 "전함 주력"
-  UK_battleship_desc:0 "These massive ships will dominate the seas and will be more than capable of defending our islands."
+  UK_battleship_desc:0 "이 거대한 선박들은 바다를 지배할 것이고 우리의 섬을 방어할 수 있을 것입니다."
   UK_carrier:0 "항공모함 주력"
-  UK_carrier_desc:0 "Careers are like airports, but in the ocean. They will greatly improve our dominance in the seas."
+  UK_carrier_desc:0 "항공모함은 공항과 같지만, 바다 위에 있습니다. 항공모함은 우리의 제해권을 크게 향상시킬 것입니다."
   UK_world_power:0 "세계 지배 선언"
-  UK_world_power_desc:0 "The British Empire is the greatest empire to ever exist. We control every corner of the globe, from Canada to Australia. We are the only country to ever exist that deserves to rule the entire world. Britannia no longer just rules the waves, we also rule the skies, the land, and the entire world."
+  UK_world_power_desc:0 "대영제국은 현존하는 가장 위대한 제국입니다. 우리는 캐나다에서 오스트레일리아까지 전 세계의 구석구석을 통제합니다. 우리는 전 세계를 지배할 자격이 있는 유일한 나라입니다. 브리타니아는 더 이상 파도를 지배할 뿐만 아니라, 하늘과 땅, 그리고 전 세계를 지배합니다."
   UK_plan_america:0 "아메리카 계획"
-  UK_plan_america_desc:0 "Plan America is a plan to both prevent instability and secure our dominance over said region."
+  UK_plan_america_desc:0 "아메리카 계획은 불안정을 방지하고 해당 지역에 대한 우리의 우위를 확보하기 위한 계획입니다."
   UK_protect_can:0 "캐나다 보호"
-  UK_protect_can_desc:0 "The United States has wanted to expand into Canada since their independence from us more than a century ago. Canada is our most valuable asset in the Americas, and losing them would mean losing our influence throughout the Americas. We must protect Canada."
+  UK_protect_can_desc:0 "미국은 1세기보다도 전에 우리로부터 독립한 이래로 캐나다로 확장하기를 원했습니다. 캐나다는 아메리카 대륙에서 우리의 가장 소중한 자산이며, 캐나다를 잃는 것은 아메리카 대륙 전체에서 우리의 영향력을 잃는 것을 의미할 것입니다. 캐나다를 보호해야 합니다."
   UK_intervene_usa:0 "제2차 미국 내전 개입"
-  UK_intervene_usa_desc:0 "With political extremism rising in the USA, we need to intervene to preserve the ideology of American democracy and ensure peace in the region."
+  UK_intervene_usa_desc:0 "미국에서 정치적 극단주의가 대두되고 있는 가운데, 우리는 미국 민주주의의 이념을 보존하고 그 지역의 평화를 보장하기 위해 개입할 필요가 있습니다."
   UK_plan_eu:0 "유럽 계획"
-  UK_plan_eu_desc:0 "Plan Europe is a plan to both prevent instability and secure our dominance over said region."
+  UK_plan_eu_desc:0 "유럽 계획은 불안정성을 방지하고 해당 지역에 대한 우리의 우위를 확보하기 위한 계획입니다."
   UK_protect_BEL:0 "벨기에 보호"
-  UK_protect_BEL_desc:0 "Belgium has threats on all sides, from the Germans in the West, to the French in the South, to the Dutch in the North. Their protection and continued existance is in our best interest."
+  UK_protect_BEL_desc:0 "벨기에는 서쪽의 독일, 남쪽의 프랑스, 북쪽의 네덜란드 등 모든 방향에서 위협받고 있습니다. 벨기에의 보호와 존속은 우리에게 가장 이익이 됩니다."
   UK_protect_NEL:0 "네덜란드 보호"
-  UK_protect_NEL_desc:0 "The Netherlands isn't exactly in the same amount of threat as Belgium, however their protections is in our best interest. After all, both England and the Netherlands shared a king at one point."
+  UK_protect_NEL_desc:0 "네덜란드는 벨기에와 같을 정도로 위협을 받고 있지 않지만, 네덜란드의 보호는 우리에게 가장 이익이 됩니다. 어쨌든, 영국과 네덜란드 모두 한 때 같은 왕을 공유했습니다."
   UK_against_BAV:0 "공산주의에 맞서기"
-  UK_against_BAV_desc:0 "As a democratic nation and one of the bastions of democracy in Europe, we stand against Communism and their world revolution."
+  UK_against_BAV_desc:0 "민주주의 국가이자 유럽의 민주주의 보루 중 하나인 우리는 공산주의와 그들의 세계혁명에 반대합니다."
   UK_embargo_BAV:0 "코뮌에 대한 금수 조치"
-  UK_embargo_BAV_desc:0 "Bavaria relies heavily on exports from other nations. If we were to cut off their supply, it would limit their growth. That is exactly what we want."
+  UK_embargo_BAV_desc:0 "바이에른은 수입에 크게 의존하고 있습니다. 만약 그들에 대한 공급을 끊는다면, 그들의 성장을 제한시킬 것입니다. 그것이 바로 우리가 원하는 것입니다."
   UK_war_BAV:0 "바이에른과의 전쟁"
-  UK_war_BAV_desc:0 "Bavaria has expressed on numerous occasions that they are not willing to cooperate with the Western Coalition. We must strike them before they inevitably strike us."
+  UK_war_BAV_desc:0 "바이에른은 서부 연합에 협조할 의사가 없다는 뜻을 여러 차례 표명했습니다. 불가피하게 우리를 공격하기 전에 그들을 공격해야 합니다."
   UK_against_RUS:0 "러시아의 확장에 맞서기"
   UK_against_RUS_desc:0 "Russia is the greatest threat to the current European order we have established during the Great War. With their recent declaration of war against Afghanistan, it is clear that they will not stop at their current borders."
   UK_embargo_RUS:0 "차르정에 대한 금수 조치"
