--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -7,8 +7,8 @@
  GER_conservatives_DEF:0 "프로이센 왕국"
  GER_democratic:0 "프로이센 공화국"
  GER_democratic_DEF:0 "프로이센 공화국"
- GER_neutrality:0 "프로이센"
- GER_neutrality_DEF:0 "프로이센"
+ GER_neutrality:0 "프로이센 왕국"
+ GER_neutrality_DEF:0 "프로이센 왕국"
  GER_communism:0 "프로이센 공화국"
  GER_communism_DEF:0 "프로이센 공화국"
  GER_fascism_ADJ:0 "독일"
@@ -68,6 +68,9 @@
  USA_communism_ADJ:0 "미국"
  USA_conservatives_ADJ:0 "미국"
  USA_socialist_ADJ:0 "미국"
+ USA:0 "미합중국"
+ USA_DEF:0 "미합중국"
+ USA_ADJ:0 "미국"
 
  CSA_fascism:0 "스위트 홈 앨라배마"
  CSA_fascism_DEF:0 "스위트 홈 앨라배마"
@@ -109,14 +112,14 @@
 
  FRA_fascism:0 "프랑스 제국"
  FRA_fascism_DEF:0 "프랑스 제국"
- FRA_democratic:0 "프랑스"
- FRA_democratic_DEF:0 "프랑스"
+ FRA_democratic:0 "프랑스 공화국"
+ FRA_democratic_DEF:0 "프랑스 공화국"
  FRA_neutrality:0 "프랑스 왕국"
  FRA_neutrality_DEF:0 "프랑스 왕국"
- FRA_socialist:0 "프랑스"
- FRA_socialist_DEF:0 "프랑스"
- FRA_conservatives:0 "프랑스"
- FRA_conservatives_DEF:0 "프랑스"
+ FRA_socialist:0 "프랑스 공화국"
+ FRA_socialist_DEF:0 "프랑스 공화국"
+ FRA_conservatives:0 "프랑스 공화국"
+ FRA_conservatives_DEF:0 "프랑스 공화국"
  FRA_communism:0 "프랑스 코뮌"
  FRA_communism_DEF:0 "프랑스 코뮌"
  FRA_fascism_ADJ:0 "프랑스"
@@ -316,24 +319,87 @@
  LAT_neutrality_ADJ:0 "쿠를란트-리보니아"
  LAT_communism_ADJ:0 "라트비아"
 
+ #Nationalist Spain
  SPR_fascism:0 "스페인국"
  SPR_fascism_DEF:0 "스페인국"
- SPR_democratic:0 "스페인"
- SPR_democratic_DEF:0 "스페인"
- SPR_neutrality:0 "스페인 왕국"
- SPR_neutrality_DEF:0 "스페인 왕국"
+ SPR_democratic:0 "스페인 공화국"
+ SPR_democratic_DEF:0 "스페인 공화국"
+ SPR_neutrality:0 "스페인국"
+ SPR_neutrality_DEF:0 "스페인국"
  SPR_communism:0 "스페인 공화국"
  SPR_communism_DEF:0 "스페인 공화국"
  SPR_socialist:0 "스페인 공화국"
  SPR_socialist_DEF:0 "스페인 공화국"
- SPR_conservatives:0 "스페인"
- SPR_conservatives_DEF:0 "스페인"
+ SPR_conservatives:0 "스페인 공화국"
+ SPR_conservatives_DEF:0 "스페인 공화국"
  SPR_fascism_ADJ:0 "스페인"
  SPR_democratic_ADJ:0 "스페인"
  SPR_neutrality_ADJ:0 "스페인"
  SPR_communism_ADJ:0 "스페인"
  SPR_socialist_ADJ:0 "스페인"
  SPR_conservatives_ADJ:0 "스페인"
+
+ #Democratic Spain
+ SPA_fascism:0 "스페인국"
+ SPA_fascism_DEF:0 "스페인국"
+ SPA_democratic:0 "공화파 스페인"
+ SPA_democratic_DEF:0 "공화파 스페인"
+ SPA_neutrality:0 "스페인 왕국"
+ SPA_neutrality_DEF:0 "스페인 왕국"
+ SPA_communism:0 "혁명 스페인"
+ SPA_communism_DEF:0 "혁명 스페인"
+ SPA_socialist:0 "공화파 스페인"
+ SPA_socialist_DEF:0 "공화파 스페인"
+ SPA_conservatives:0 "스페인 공화국"
+ SPA_conservatives_DEF:0 "스페인 공화국"
+ SPA_fascism_ADJ:0 "스페인"
+ SPA_democratic_ADJ:0 "스페인"
+ SPA_neutrality_ADJ:0 "스페인"
+ SPA_communism_ADJ:0 "스페인"
+ SPA_socialist_ADJ:0 "스페인"
+ SPA_conservatives_ADJ:0 "스페인"
+ 
+ #Communist Spain
+ SPC_fascism:0 "스페인국"
+ SPC_fascism_DEF:0 "스페인국"
+ SPC_democratic:0 "스페인 공화국"
+ SPC_democratic_DEF:0 "스페인 공화국"
+ SPC_neutrality:0 "스페인 제국"
+ SPC_neutrality_DEF:0 "스페인 제국"
+ SPC_communism:0 "스페인 코뮌"
+ SPC_communism_DEF:0 "스페인 코뮌"
+ SPC_socialist:0 "혁명 스페인"
+ SPC_socialist_DEF:0 "혁명 스페인"
+ SPC_conservatives:0 "스페인 공화국"
+ SPC_conservatives_DEF:0 "스페인 공화국"
+ SPC_fascism_ADJ:0 "스페인"
+ SPC_democratic_ADJ:0 "스페인"
+ SPC_neutrality_ADJ:0 "스페인"
+ SPC_communism_ADJ:0 "스페인"
+ SPC_socialist_ADJ:0 "스페인"
+ SPC_conservatives_ADJ:0 "스페인"
+ 
+ #Monarchist Spain
+ SPB_fascism:0 "스페인 제국"
+ SPB_fascism_DEF:0 "스페인 제국"
+ SPB_democratic:0 "스페인 왕국"
+ SPB_democratic_DEF:0 "스페인 왕국"
+ SPB_neutrality:0 "스페인 왕국"
+ SPB_neutrality_DEF:0 "스페인 왕국"
+ SPB_communism:0 "혁명 스페인"
+ SPB_communism_DEF:0 "혁명 스페인"
+ SPB_socialist:0 "스페인 왕국"
+ SPB_socialist_DEF:0 "스페인 왕국"
+ SPB_conservatives:0 "스페인 왕국"
+ SPB_conservatives_DEF:0 "스페인 왕국"
+ SPB_fascism_ADJ:0 "스페인"
+ SPB_democratic_ADJ:0 "스페인"
+ SPB_neutrality_ADJ:0 "스페인"
+ SPB_communism_ADJ:0 "스페인"
+ SPB_socialist_ADJ:0 "스페인"
+ SPB_conservatives_ADJ:0 "스페인"
+
+ #Extras
 
  ITA_fascism:0 "이탈리아 제국"
  ITA_fascism_DEF:0 "이탈리아 제국"
@@ -1272,18 +1338,25 @@
  MEN_democratic_ADJ:0 "몽강"
  MEN_neutrality_ADJ:0 "몽강"
  MEN_communism_ADJ:0 "몽강"
- KOR_fascism:0 "조선총독부"
- KOR_fascism_DEF:0 "조선총독부"
+
+ KOR_conservatives:0 "대한민국"
+ KOR_conservatives_DEF:0 "대한민국"
+ KOR_conservatives_ADJ:0 "한국"
+ KOR_fascism:0 "대한제국"
+ KOR_fascism_DEF:0 "대한제국"
  KOR_democratic:0 "대한민국"
  KOR_democratic_DEF:0 "대한민국"
+ KOR_socialist:0 "대한민국"
+ KOR_socialist_DEF:0 "대한민국"
  KOR_communism:0 "조선민주주의인민공화국"
  KOR_communism_DEF:0 "조선민주주의인민공화국"
  KOR_neutrality:0 "대한제국"
  KOR_neutrality_DEF:0 "대한제국"
  KOR_fascism_ADJ:0 "한국"
  KOR_democratic_ADJ:0 "한국"
- KOR_communism_ADJ:0 "한국"
+ KOR_communism_ADJ:0 "조선"
  KOR_neutrality_ADJ:0 "한국"
+ KOR_socialist_ADJ:0 "한국"
  
  SER_fascism:0 "세르비아 제국"
  SER_fascism_DEF:0 "세르비아 제국"
@@ -2422,30 +2495,47 @@
  KUW_democratic_ADJ:0 "쿠웨이트"
  KUW_neutrality_ADJ:0 "쿠웨이트"
  KUW_communism_ADJ:0 "쿠웨이트"
- CSA_fascism:0 "아메리카 연합국"
- CSA_fascism_DEF:0 "아메리카 연합국"
+
+ CSA_fascism:0 "스위트 홈 앨라배마"
+ CSA_fascism_DEF:0 "스위트 홈 앨라배마"
  CSA_democratic:0 "아메리카 연합국"
  CSA_democratic_DEF:0 "아메리카 연합국"
- CSA_communism:0 "아메리카 노동자 연합국"
- CSA_communism_DEF:0 "아메리카 노동자 연합국"
+ CSA_conservatives:0 "아메리카 연합국"
+ CSA_conservatives_DEF:0 "아메리카 연합국"
+ CSA_neutrality:0 "아메리카 연합국"
+ CSA_neutrality_DEF:0 "아메리카 연합국"
+ CSA_socialist:0 "아메리카 연합국"
+ CSA_socialist_DEF:0 "아메리카 연합국"
+ CSA_communism:0 "아메리카 코뮌"
+ CSA_communism_DEF:0 "아메리카 코뮌"
  CSA_neutrality:0 "아메리카 연합국"
  CSA_neutrality_DEF:0 "아메리카 연합국"
  CSA_fascism_ADJ:0 "연합"
- CSA_communism_ADJ:0 "연합"
  CSA_democratic_ADJ:0 "연합"
  CSA_neutrality_ADJ:0 "연합"
+ CSA_communism_ADJ:0 "연합"
+ CSA_conservatives_ADJ:0 "연합"
+ CSA_socialist_ADJ:0 "연합"
+ CSA:0 "아메리카 연합국"
+ CSA_DEF:0 "아메리카 연합국"
+ CSA_ADJ:0 "연합"
+
  USB_fascism:0 "아메리카 비동맹국"
  USB_fascism_DEF:0 "아메리카 비동맹국"
  USB_democratic:0 "아메리카 비동맹국"
  USB_democratic_DEF:0 "아메리카 비동맹국"
- USB_communism:0 "아메리카 비동맹국"
- USB_communism_DEF:0 "아메리카 비동맹국"
  USB_neutrality:0 "아메리카 비동맹국"
  USB_neutrality_DEF:0 "아메리카 비동맹국"
+ USB_communism:0 "아메리카 비동맹국"
+ USB_communism_DEF:0 "아메리카 비동맹국"
  USB_fascism_ADJ:0 "미국"
- USB_communism_ADJ:0 "미국"
  USB_democratic_ADJ:0 "미국"
  USB_neutrality_ADJ:0 "미국"
+ USB_communism_ADJ:0 "미국"
+
+ USB:0 "아메리카 비동맹국"
+ USB_DEF:0 "아메리카 비동맹국"
+ USB_ADJ:0 "미국"
  CYP_fascism:1 "키프로스 제국"
  CYP_fascism_DEF:1 "키프로스 제국"
  CYP_democratic:1 "키프로스 공화국"
@@ -2555,17 +2645,18 @@
  RAM_neutrality_ADJ:0 "러시아령 아메리카"
  RAM_fascism_ADJ:0 "알래스카"
  RAM_communism_ADJ:0 "소비에트령 아메리카"
- #SOVIET UNION OPTION
+
+ #This is used for when Russia is a Republic
  RUS_1_democratic:0 "러시아 공화국"
  RUS_1_democratic_DEF:0 "러시아 공화국"
- RUS_1_neutrality:0 "러시아 제국"
- RUS_1_neutrality_DEF:0 "러시아 제국"
+ RUS_1_neutrality:0 "러시아 공화국"
+ RUS_1_neutrality_DEF:0 "러시아 공화국"
  RUS_1_fascism:0 "국가주의 러시아"
  RUS_1_fascism_DEF:0 "국가주의 러시아"
  RUS_1_communism:0 "소비에트 연방"
  RUS_1_communism_DEF:0 "소비에트 연방"
- RUS_1_conservatives:0 "러시아 제국"
- RUS_1_conservatives_DEF:0 "러시아 제국"
+ RUS_1_conservatives:0 "러시아 공화국"
+ RUS_1_conservatives_DEF:0 "러시아 공화국"
  RUS_1_socialist:0 "러시아 공화국"
  RUS_1_socialist_DEF:0 "러시아 공화국"
  RUS_1_fascism_ADJ:0 "러시아"
@@ -2575,16 +2666,17 @@
  RUS_1_conservatives_ADJ:0 "러시아"
  RUS_1_socialist_ADJ:0 "러시아"
  
- RUS_democratic:0 "러시아"
- RUS_democratic_DEF:0 "러시아"
- RUS_neutrality:0 "러시아"
- RUS_neutrality_DEF:0 "러시아"
+ #This is better when Russia is a Tsardom
+ RUS_democratic:0 "러시아 제국"
+ RUS_democratic_DEF:0 "러시아 제국"
+ RUS_neutrality:0 "러시아 제국"
+ RUS_neutrality_DEF:0 "러시아 제국"
  RUS_fascism:0 "국가주의 러시아"
  RUS_fascism_DEF:0 "국가주의 러시아"
- RUS_communism:0 "소비에트 러시아"
- RUS_communism_DEF:0 "소비에트 러시아"
- RUS_conservatives:0 "러시아"
- RUS_conservatives_DEF:0 "러시아"
+ RUS_communism:0 "러시아 공화국"
+ RUS_communism_DEF:0 "러시아 공화국"
+ RUS_conservatives:0 "러시아 제국"
+ RUS_conservatives_DEF:0 "러시아 제국"
  RUS_socialist:0 "러시아"
  RUS_socialist_DEF:0 "러시아"
  RUS_fascism_ADJ:0 "러시아"
@@ -2696,6 +2788,9 @@
  KRW_fascism_ADJ:0 "갈리치아"
  KRW_democratic_ADJ:0 "갈리치아"
  KRW_communism_ADJ:0 "갈리치아"
+ KRW:0 "갈리치아-로도메리아-부코비나"
+ KRW_DEF:0 "갈리치아-로도메리아-부코비나"
+ KRW_ADJ:0 "갈리치아"
  
  RHN_neutrality:0 "라인 공화국"
  RHN_neutrality_DEF:0 "라인 공화국"
@@ -2709,6 +2804,9 @@
  RHN_fascism_ADJ:0 "라인"
  RHN_democratic_ADJ:0 "라인"
  RHN_communism_ADJ:0 "라인"
+ RHN:0 "라인란트"
+ RHN_DEF:0 "라인란트"
+ RHN_ADJ:0 "라인"
  
  WUT_neutrality:0 "바덴-뷔르템베르크"
  WUT_neutrality_DEF:0 "바덴-뷔르템베르크"
@@ -2722,6 +2820,9 @@
  WUT_democratic_ADJ:0 "바덴-뷔르템베르크"
  WUT_communism_ADJ:0 "바덴-뷔르템베르크"
  WUT_fascism_ADJ:0 "슈바벤"
+ WUT:0 "바덴-뷔르템베르크"
+ WUT_DEF:0 "바덴-뷔르템베르크"
+ WUT_ADJ:0 "바덴-뷔르템베르크"
  
  SAX_neutrality:0 "작센 왕국"
  SAX_neutrality_DEF:0 "작센 왕국"
@@ -2735,6 +2836,9 @@
  SAX_democratic_ADJ:0 "작센"
  SAX_communism_ADJ:0 "작센"
  SAX_fascism_ADJ:0 "작센"
+ SAX:0 "작센"
+ SAX_DEF:0 "작센"
+ SAX_ADJ:0 "작센"
  
  WSM_neutrality:0 "저지 독일"
  WSM_neutrality_DEF:0 "저지 독일"
@@ -2748,6 +2852,9 @@
  WSM_fascism_ADJ:0 "하노버"
  WSM_communism_ADJ:0 "북독일"
  WSM_democratic_ADJ:0 "북독일"
+ WSM:0 "저지 독일"
+ WSM_DEF:0 "저지 독일"
+ WSM_ADJ:0 "북독일"
  
  TUR_ottoman_nation_democratic:0 "오스만 공화국"
  TUR_ottoman_nation_democratic_DEF:0 "오스만 공화국
@@ -3109,6 +3216,9 @@ AUS_austria_hungary_fascism_DEF:0 "오스트리아국"
  QNG_democratic_ADJ:0 "중국"
  QNG_neutrality_ADJ:0 "중국"
  QNG_communism_ADJ:0 "중국"
+ QNG:0 "청나라"
+ QNG_DEF:0 "청나라"
+ QNG_ADJ:0 "중국"
  
  BUK_neutrality:0 "부하라 토후국"
  BUK_neutrality_DEF:0 "부하라 토후국"
@@ -3129,3 +3239,18 @@ AUS_austria_hungary_fascism_DEF:0 "오스트리아국"
  BUK_socialist_ADJ:0 "부하라"
  BUK_communism_ADJ:0 "부하라"
  
+ ALG_fascism:1 "알제리 칼리프국"
+ ALG_fascism_DEF:1 "알제리 칼리프국"
+ ALG_democratic:1 "알제리 공화국"
+ ALG_democratic_DEF:1 "알제리 공화국"
+ ALG_neutrality:0 "알제리"
+ ALG_neutrality_DEF:0 "알제리"
+ ALG_communism:1 "알제리 코뮌"
+ ALG_communism_DEF:1 "알제리 코뮌"
+ ALG_fascism_ADJ:0 "알제리"
+ ALG_democratic_ADJ:0 "알제리"
+ ALG_neutrality_ADJ:0 "알제리"
+ ALG_communism_ADJ:0 "알제리"
+ ALG:0 "알제리"
+ ALG_DEF:0 "알제리"
+ ALG_ADJ:0 "알제리"
