--- a/localisation/fra_focus_l_english.yml
+++ b/localisation/fra_focus_l_english.yml
@@ -13,10 +13,12 @@
  FR_inv_CZE_desc:0 "1918년 그들의 독립 이후, 체코는 강력한 민주주의 국가로 성장했습니다. 우리는 그들을 지지하고 우리의 공동의 적 독일과 맞서기 위해 우리의 힘을 통합해야 합니다."
  FR_inv_ITA:0 "이탈리아와의 친선"
  FR_inv_ITA_desc:0 "프랑스와 이탈리아는 세계 대전 당시 모두 협상국에 있었고, 이제 다시 한 번 인력을 결집할 때가 되었습니다!"
- FR_retake_FTU:0 "프랑스령 아프리카 해방"
- FR_retake_FTU_desc:0 "우리의 혁명에 이어 프랑스령 아프리카는 자본주의 정부로 독립을 쟁취했습니다. 그들은 우리의 진홍색 깃발 아래서 해방되어야 합니다!"
- FR_annex_FTU:0 "프랑스령 아프리카 통합"
- FR_annex_FTU_desc:0 "우리가 프랑스령 아프리카를 우리의 새로운 프랑스 제국에 통합시키는 것은 중요합니다. 이로써 우리는 더 많은 인력을 채용하고 산업 안정을 더욱 확립할 수 있을 것입니다."
+FR_retake_FTU:0 "옛 지중해 식민지 해방"
+ FR_retake_FTU_desc:0 "옛 프랑스 제국의 붕괴에도 불구하고 우리는 이전의 지중해 영토를 확보해야 합니다. 그들이 적의 손에 넘어가면 안됩니다. 질서를 복원해야 합니다."
+ FR_annex_FTU:0 "북알제리 통합"
+ FR_annex_FTU_desc:0 "많은 프랑스인들이 알제리의 정복을 위해 죽었습니다. 알제리는 프랑스 땅이고 프랑스인들이 거주하고 있습니다. 우리는 알제리 도서를 프랑스 제국으로 더욱 통합하는 방안을 모색할 것입니다."
+ FR_war_VIN:0 "프랑스 인도차이나 통합"
+ FR_war_VIN_desc:0 "우리의 옛 제국은 더 이상 없습니다. 우리는 이제 사회주의 국가입니다. 그렇다고 땅을 공짜로 나눠주는 것은 아닙니다. 인도차이나는 고무가 풍부하고 아시아에서 가장 큰 식민지였습니다. 일본제국이 점령하기 전에 이 새로운 나라들을 점령해야 합니다."
  FR_maginot:0 "마지노선 강화"
  FR_maginot_desc:0 "독일 통일이 진행되고 있는 가운데, 우리는 우리의 국경을 안전하게 지키는 것이 중요합니다. 우리는 알자스에 있는 우리의 요새를 업그레이드해서 잠재적인 독일 침략으로부터 프랑스를 보호할 것입니다!"
  FR_fort_ITA:0 "알프스선 강화"
@@ -200,4 +202,10 @@
  FR_remove_disjointed_desc:0 "우리 정부는 공산주의자, 진보주의자와 보수주의자, 그리고 파시스트들이 한쪽에 퍼져 있어 매우 다양합니다. 발전을 계속하기 위해서는 국가를 통일하고 정치 스펙트럼의 모든 면에서 최선을 다해야 합니다."
  FR_war_BAV:0 "프랑스-바이에른 전쟁"
  FR_war_BAV_desc:0 "바이에른은 우리의 생활방식에 가장 큰 위협입니다. 그들의 이데올로기는 모든 나라가 공산주의자여야 합니다고 선언합니다. 그것은 단순히 프랑스에서 일어나지 않을 것입니다. 이제 이 빨간 쓰레기들을 완전히 쓰러뜨려야 할 때입니다! 프랑스에 영광을!"
+ FR_war_FEA:0 "인도차이나 보호"
+ FR_war_FEA_desc:0 "대부분의 식민지가 독립되어 있기 때문에, 한 특정한 식민지는 현재 일본인들에 의해 큰 점령 위협을 받고 있습니다. 물론, 이 식민지는 프랑스령 인도차이나입니다. 너무 늦기 전에 점령해야 합니다..."
+ 
+ #some tooltips
+ fra_indochina_wargoals_tt:0 "이 국가 중점은 프랑스가 이전의 아시아 식민지에 대항하여 전쟁을 벌일 수 있도록 해줄 것입니다.\n"
+ fra_north_africa_wargoals_tt:0 "이 국가 중점은 프랑스가 이전의 지중해 속지에 대항하여 전쟁을 벌일 수 있도록 해줄 것입니다.\n"
 
