--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -110,7 +110,7 @@
  prussia.10014.a:0 "군대를 동원하라."
  prussia.10014.b:0 "서유럽은 러시아의 관심에 없다."
  prussia.10015.t:0 "러시아가 전쟁을 준비하다!"
- prussia.10015.d:0 "우리 군대의 동원은 끝났습니다. 우리는 오랜 동맹국인 프랑스를 보호하기 위해 독일과 전쟁을 할 준비가 되어 있습니다!\n우리가 세계 최강국임을 다시 한번 전세계에 보여줄 때입니다!"
+ prussia.10015.d:0 "우리 군대의 동원은 끝났습니다. 우리는 오랜 동맹국인 프랑스를 보호하기 위해 독일과 전쟁을 할 준비가 되어 있습니다!\n우리가 세계 최강국임을 다시 한번 전 세계에 보여줄 때입니다!"
  prussia.10015.a:0 "하느님이 우리 편이시기를 빈다!"
  prussia.10016.t:0 "러시아가 군대를 동원하다!"
  prussia.10016.d:0 "우리 정보부은 러시아가 군대 동원을 시작하고 있다는 것을 보여줍니다. 전문가들은 러시아가 100일 안에 준비가 될 것으로 추정하고 있습니다. 러시아가 참전하기 전에 서둘러 프랑스의 격퇴를 시도할 것인지, 아니면 러시아 국경을 보강하고 러시아 군세의 방어에 대비할 것인지 결정해야 할 때입니다."
@@ -181,32 +181,31 @@
 GER_unification_tt:0 "§Y프로이센은 북독일국을 합병하고 북독일 연방을 형성할 것입니다§!"
 GER_expand_wall:0 "요새를 업그레이드하는 새로운 디시전을 사용할 수 있습니다"
   #####Holland events, there arent many
-  holland.4.t:0 "네덜란드의 중립"
-  holland.4.d:0 "유럽 대륙에서 세계 대전이 벌어지고 있는 가운데 네덜란드 왕국이 현재 적과 교역을 하고 있다는 사실이 알려지게 되었습니다.\n우리는 승리를 달성하는 데 독일의 완전한 고립이 필수적이라고 믿고 있으므로, 네덜란드는 우리의 적과의 무역을 중단해야 합니다.\n만약 그들이 그렇게 하지 않는다면, 그들은 대영제국의 적으로 간주될 것입니다..."
-  holland.4.a:0 "최후통첩을 보내라."
-  holland.4.b:0 "우리는 네덜란드의 중립을 존중해야 한다!"
+  holland.1000.t:0 "네덜란드의 중립"
+  holland.1000.d:0 "유럽 대륙에서 세계 대전이 벌어지고 있는 가운데 네덜란드 왕국이 현재 적과 교역을 하고 있다는 사실이 알려지게 되었습니다.\n우리는 승리를 달성하는 데 독일의 완전한 고립이 필수적이라고 믿고 있으므로, 네덜란드는 우리의 적과의 무역을 중단해야 합니다.\n만약 그들이 그렇게 하지 않는다면, 그들은 대영제국의 적으로 간주될 것입니다..."
+  holland.1000.a:0 "최후통첩을 보내라."
+  holland.1000.b:0 "우리는 네덜란드의 중립을 존중해야 한다!"
   
-  holland.1.d:0 "유럽에서의 전쟁 발발에 이어, 우리는 중립을 선언했습니다. 영국이 우리에게 한 편을 선택할 수밖에 없게 한 것으로 보입니다.\n그들의 최후통첩은 우리가 독일과의 어떤 무역도 중단할 것을 요구합니다. 우리가 최후통첩을 받아들인다면 독일은 우리를 그들의 적으로 간주할 것이고 따라서 우리와 그들 사이의 긴장이 고조될 것입니다..."
-  holland.1.t:0 "영국의 최후통첩"
-  holland.1.a:0 "수락"
-  holland.1.b:0 "거부"
+  holland.1001.d:0 "유럽에서의 전쟁 발발에 이어, 우리는 중립을 선언했습니다. 영국이 우리에게 한 편을 선택할 수밖에 없게 한 것으로 보입니다.\n그들의 최후통첩은 우리가 독일과의 어떤 무역도 중단할 것을 요구합니다. 우리가 최후통첩을 받아들인다면 독일은 우리를 그들의 적으로 간주할 것이고 따라서 우리와 그들 사이의 긴장이 고조될 것입니다..."
+  holland.1001.t:0 "영국의 최후통첩"
+  holland.1001.a:0 "수락"
+  holland.1001.b:0 "거부"
   
-  holland.2.t:0 "네덜란드가 최후통첩을 거부하다!"
-  holland.2.d:0 "네덜란드 왕국은 우리의 최후 통첩에 응하지 않았으니 그들은 우리의 적이 되었습니다! 이제 우리가 할 일이 하나 더 있습니다..."
-  holland.2.a:0 "전쟁이다!"
-  holland.2.b:0 "내버려둬라..."
+  holland.1002.t:0 "네덜란드가 최후통첩을 거부하다!"
+  holland.1002.d:0 "네덜란드 왕국은 우리의 최후 통첩에 응하지 않았으니 그들은 우리의 적이 되었습니다! 이제 우리가 할 일이 하나 더 있습니다..."
+  holland.1002.a:0 "전쟁이다!"
+  holland.1002.b:0 "내버려둬라..."
   
-  holland.3.t:0 "영국이 네덜란드에 전쟁을 선포하다!"
-  holland.3.d:0 "전쟁은 점점 더 커지고 있습니다! 독일과의 어떤 무역도 중단하라는 영국의 최후통첩이 거절된 후, 네덜란드는 독일로부터 보호를 받을 수밖에 없었습니다.\n전쟁이 발발한 후, 네덜란드 왕국은 중립을 선언했습니다. 독일은 지금까지 그것을 존중해 왔지만, 영국은 독일의 전쟁 노력을 방해하기 위해 어떤 수단이라도 사용할 수 밖에 없었습니다..."
-  holland.3.a:0 "불쌍한 네덜란드."
-  holland.3.b:0 "불쌍한 네덜란드."
-  holland.3.c:0 "단지 또다른 희생일 뿐이다..."
+  holland.1003.t:0 "영국이 네덜란드에 전쟁을 선포하다!"
+  holland.1003.d:0 "전쟁은 점점 더 커지고 있습니다! 독일과의 어떤 무역도 중단하라는 영국의 최후통첩이 거절된 후, 네덜란드는 독일로부터 보호를 받을 수밖에 없었습니다.\n전쟁이 발발한 후, 네덜란드 왕국은 중립을 선언했습니다. 독일은 지금까지 그것을 존중해 왔지만, 영국은 독일의 전쟁 노력을 방해하기 위해 어떤 수단이라도 사용할 수 밖에 없었습니다..."
+  holland.1003.a:0 "불쌍한 네덜란드."
+  holland.1003.b:0 "불쌍한 네덜란드."
   
   holland.1004.t:0 "네덜란드의 금수 조치!"
   holland.1004.d:0 "네덜란드는 우리와 어떤 무역도 중단하라는 영국의 요구를 받아들여서 우리에게 금수 조치를 내렸습니다. 이는 그들을 우리의 적으로 만듭니다!"
   holland.1004.a:0 "전쟁이다!"
   holland.1005.t:0 "독일이 군사 통행권을 요청하다!"
-  holland.1005.d:0 "전세계가 전쟁 중입니다!\n우리나라는 침략 위협을 받고 있습니다. 독일이 우리 땅을 통과할 수 있게 해달라는 공식 요청을 했습니다. 우리가 거절하면 개입이 불가피하다고 합니다..."
+  holland.1005.d:0 "전 세계가 전쟁 중입니다!\n우리나라는 침략 위협을 받고 있습니다. 독일이 우리 땅을 통과할 수 있게 해달라는 공식 요청을 했습니다. 우리가 거절하면 개입이 불가피하다고 합니다..."
   holland.1005.a:0 "수락"
   holland.1005.b:0 "거부"
 
@@ -242,6 +241,14 @@ GER_reinhardt_for_prussia:0 "게오르크-한스 라인하르트 재임명"
 GER_runsdtedt_for_prussia:0 "게르트 폰 룬트슈테트 재임명"
 GER_hell_for_prussia:0 "에른스트-에버하드 헬 재임명"
 GER_rommel_for_prussia:0 "에르빈 롬멜 재임명"
+GER_imminent_civil_war:0 "임박한 내전"
+GER_imminent_civil_war_desc:0 "전선이 그려졌습니다... 독일 내전이 일어날 것은 매우 분명합니다. 프로이센인들은 올겨울 공세를 준비하고 있습니다. 독일 내의 나라들과 제휴해야 합니다. 당신의 나라와 동맹을 맺은 나라들이 당신과 함께 싸우게 될 것입니다."
+GER_imminent_civil_war_decision:0 "내전 준비"
+GER_imminent_civil_war_outbreak_decision:0 "내전 발발!"
+GER_align_SAX:0 "작센과의 제휴"
+GER_align_WUT:0 "바덴과의 제휴"
+GER_align_WSM:0 "저지 독일과의 제휴"
+GER_align_RHN:0 "라인란트와의 제휴"
 
 
 GER_election_ready:0 "한스 폰 젝트 사망함!"
