--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -510,7 +510,7 @@
  VICTORY_POINTS_495:0 "도르트문트"
  VICTORY_POINTS_540:0 "플리머스"
  VICTORY_POINTS_657:0 "콘스탄차"
- VICTORY_POINTS_778:0 "안시"
+ VICTORY_POINTS_778:0 "샤모니"
  VICTORY_POINTS_904:0 "뒤즈제"
  VICTORY_POINTS_911:0 "툴롱"
  VICTORY_POINTS_925:0 "안코나"
@@ -577,7 +577,7 @@
  VICTORY_POINTS_6318:0 "맨체스터"
  VICTORY_POINTS_11405:0 "자포리자"
  VICTORY_POINTS_11561:0 "크리비리흐"
- VICTORY_POINTS_9461:0 "보로실로브그라드"
+ VICTORY_POINTS_9461:0 "루한스크"
  VICTORY_POINTS_3734:0 "크라스노다르"
  VICTORY_POINTS_11349:0 "르제프"
  VICTORY_POINTS_8011:0 "벵갈루루"
@@ -934,4 +934,7 @@
  VICTORY_POINTS_6933:0 "베자"
  VICTORY_POINTS_970:0 "세투발"
  VICTORY_POINTS_2115:0 "나미브"
+ VICTORY_POINTS_6666:0 "주네브"
+ VICTORY_POINTS_9638:0 "바젤"
+ VICTORY_POINTS_9523:0 "베르사유"
  
