--- a/localisation/POR_Portugal_l_english.yml
+++ b/localisation/POR_Portugal_l_english.yml
@@ -508,6 +508,14 @@ portu.47.t:0 "스페인이 통일을 거부하다"
 portu.47.d:0 ""
 portu.47.a:0 "정말 유감이군."
 
+portu.48.t:0 "마누엘 2세의 서거!"
+portu.48.d:0 "지난 몇 주 동안 국왕은 위독했습니다. 1932년 입원한 이후 폐하께서는 호흡곤란을 겪었습니다.\n\n불행히도 병마가 그를 데려갔고 오늘 아침 일찍 그는 개인 의사들에 의해 사망선고를 받았습니다.\n\n다음 주에 취임할 예정인 두아르테 2세가 이제 이 나라를 통치할 것입니다."
+portu.48.a:0 "두아르테 2세 만세!"
+
+portu.49.t:0 "포르투갈의 마누엘 2세의 서거!"
+portu.49.d:0 "포르투갈의 마누엘 2세가 오늘 아침 의사들에 의해 사망선고를 받았습니다.\n\n1932년 입원한 이후 폐하께서는 호흡곤란을 겪었습니다.\n\n포르투갈을 통치하는 것은 이제 그의 아들 두아르테 2세가 될 것입니다. 두아르테 2세는 다음 주에 취임할 예정입니다. 그의 후계자가 이미 마누엘 2세의 건강이 악화될 경우에 대비하여 그 자리를 대신할 준비가 되어 있었기 때문에 순조로운 권력 이양을 기대하고 있습니다."
+portu.49.a:0 "유감이다."
+
 ###############################Decisions#################
 POR_spartacist_civil_war_category:0 "다가오는 충돌"
 POR_spartacist_civil_war_category_desc:0 "군부는 선거에서의 우리의 혁명적인 승리에 만족하지 않습니다. 그들은 이미 쿠데타를 계획하고 있을 것입니다. 확실히, 우리는 그들의 이전의 모든 쿠데타로 그것을 알 수 있습니다. 그러나 우리는 구관들처럼 천천히, 그리고 저항하지 않고 내려가지 않을 것입니다. 쿠데타에 대비해서 군을 후퇴시키겠습니다. 우리는 내전의 결과를 두려워하지 않습니다. 만약 그것이 이 혁명을 완성하기 위해 필요한 것이라면 말입니다."
