--- a/localisation/ger_ideas_l_english.yml
+++ b/localisation/ger_ideas_l_english.yml
@@ -32,13 +32,23 @@
   GER_washington_treaty_desc:0 "세계 대전이 끝난 후, 일본, 미국, 러시아, 영국은 무서운 건함 경쟁을 막기 위해 많은 노력을 기울였습니다. 프로이센 해군 규모도 제한했습니다. 제국 해군는 바이에른함와 슐레스비히 홀슈타인함 두 척의 전함을 유지할 수 있었습니다."
   GER_naval_revival_tt:0 "독일은 전함 1척, 중순양함 3척, 경순양함 6척, 구축함 3척으로 구성된 예전의 예비 함대를 부활시킬 것입니다!"
   GER_scharnhorst_programme:0 "저지 독일이 프로이센은 각각 1척의 전함을 얻게 됩니다. 저지 독일이 합병되었다면 프로이센은 2척의 전함을 얻게 됩니다."
+  GRK_influence_0:0 "중립성"
+  GRK_influence_0_desc:0 "독일 내전이 격화되면 중립을 지킬 것입니다."
+  GRK_influence_1:0 "프로이센 영향력 I"
+  GRK_influence_2:0 "프로이센 영향력 II"
+  GRK_influence_3:0 "프로이센 영향력 III"
+  GRK_influence_-1:0 "바이에른 영향력 I"
+  GRK_influence_-2:0 "바이에른 영향력 II"
+  GRK_influence_-3:0 "바이에른 영향력 III"
+  GER_imminent_civil_war_flag:0 "준비가 시작되었습니다."
   konig_pact_idea:0 "쾨니히 조약"
-  konig_pact_idea_desc:0 "독일과 러시아 모두에게 평화와 화합을 이루기 위해 혜택을 줄 협약이다."
- ideology_boosting_decisions:0 "여당 지원 확대"
- ideology_boosting_decisions_desc:0 "여당이 다수당의 지위를 유지하기 위해 고군분투하고 있다면 인기에 조금이나마 힘을 실어줄 수 있을 것이다."
- ideology_boosting_neutrality:0 "전제주의 인기도 증가"
- ideology_boosting_conservatives:0 "보수주의 인기도 증가"
- ideology_boosting_socialist:0 "사회주의 인기도 증가"
- ideology_boosting_democratic:0 "자유주의 인기도 증가"
- ideology_boosting_fascism:0 "국가주의 인기도 증가"
- ideology_boosting_communism:0 "공산주의 인기도 증가"
+  konig_pact_idea_desc:0 "독일과 러시아 모두에게 평화와 화합을 이루기 위해 혜택을 줄 협약입니다."
+  ideology_boosting_decisions:0 "여당 지원 확대"
+  ideology_boosting_decisions_desc:0 "여당이 다수당의 지위를 유지하기 위해 고군분투하고 있다면 인기에 조금이나마 힘을 실어줄 수 있을 것입니다."
+  ideology_boosting_neutrality:0 "전제주의 인기도 증가"
+  ideology_boosting_conservatives:0 "보수주의 인기도 증가"
+  ideology_boosting_socialist:0 "사회주의 인기도 증가"
+  ideology_boosting_democratic:0 "자유주의 인기도 증가"
+  ideology_boosting_fascism:0 "국가주의 인기도 증가"
+  ideology_boosting_communism:0 "공산주의 인기도 증가"
+ 
