--- a/localisation/misc_l_english.yml
+++ b/localisation/misc_l_english.yml
@@ -15,8 +15,8 @@ long_pre:0 "휴이 롱 선출"
 GER_united_germany:0 "재통일"
 GER_is_reuniting:0 "독일 수복"
 RUS_women_squad_tt:0 "§G러시아는 전설적인 여성 죽음의 사단을 받게 될 것입니다!§!"
-TUR_this_will_leave_turkey_to_die:0 "R이 결정은 터키인들이 홀로 러시아를 상대하게 할 것입니다§!."
-TUR_france_cannot_back_turkey_alone:0 "Y프랑스는 우리의 지원 없이는 §Y터키§를 지지하지 않을 것입니다."
+TUR_this_will_leave_turkey_to_die:0 "§R이 결정은 터키인들이 홀로 러시아를 상대하게 할 것입니다§!."
+TUR_france_cannot_back_turkey_alone:0 "§Y프랑스§는 우리의 지원 없이는 §Y터키§를 지지하지 않을 것입니다."
 TUR_this_will_end_the_war:0 "§R차르그라드를 당분간 길을 잃게 될 것입니다§."
 TUR_might_cause_majors_to_join:0 "§R주요 강대국들은 터키의 독립을 보장할 수도 있습니다§."
 rus_general:0 "통합된 권력"
